--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.10.3",
     "@stripe/stripe-js": "^5.6.0",
     "@supabase/supabase-js": "^2.48.1",
+    "@tanstack/react-query": "^5.65.1",
     "framer-motion": "^12.0.6",
     "next": "15.1.6",
     "react": "^19.0.0",
